<resources>
    <string name="app_name">OpenID_Demo_App</string>
    <string name="setting">Setting</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="logout">Đăng xuất</string>
    <string name="login">Đăng nhập</string>
    <string name="server_client_id">648165241067-07m6i75rh03v47sesmd5kcenskc440lr.apps.googleusercontent.com</string>
    <string name="facebook_app_id">208598950264864</string>
    <string name="fb_login_protocol_scheme">fb208598950264864</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Tùy chọn</string>
    <string name="menu_tools">Công cụ</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="show_map">Hiển thị bản đồ</string>
    <string name="infor">Thông tin</string>
    <string name="account">Tài khoản</string>
    <string name="Introduce">Giới thiệu</string>
    <string name="Intro_title_1">MÃ SMARTCODES LÀ GÌ?</string>
    <string name="Intro_line_1">SmartCodes tương tự địa chỉ giúp mọi người xác định được vị trí dễ dàng. SmartCodes là sự kết hợp giữa mã bưu chính, thông tin địa chỉ và giá trị tọa độ vị trí.</string>
    <string name="Intro_line_2">SmartCodes cung cấp địa chỉ cho mọi người, ở mọi nơi, cho phép họ nhận giao hàng, truy cập các dịch vụ y tế, cứu nạn khẩn cấp, ... thuận tiện.</string>
    <string name="Intro_line_3">Với SmartCodes thông tin địa chỉ, tên đường, tên đơn vị hành chính, vị trí tọa độ được mã hóa dưới dạng dãy số ngắn và tồn tại bất kỳ nơi đâu kể cả nơi chưa có đường.</string>
    <string name="Intro_title_2">SMARTCODES ĐỘC ĐÁO NHƯ THẾ NÀO?</string>


</resources>
