<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvTitle_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_grey_600"
            android:textSize="18sp"
            android:text="@string/Intro_title_1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/tvLine_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Intro_line_1"
            android:layout_below="@+id/tvTitle_1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/tvLine_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Intro_line_2"
            android:layout_below="@+id/tvLine_1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/tvLine_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/Intro_line_3"
            android:layout_below="@+id/tvLine_2"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="13sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/tvTitle_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_grey_600"
            android:textSize="18sp"
            android:text="@string/Intro_title_2"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle_2"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:weightSum="9"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imgFree"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/ic_free"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MIỄN PHÍ"
                        android:textSize="13sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imgAccessible_offline"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/ic_accessible_offline" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CHÍNH XÁC"
                        android:textSize="13sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imgEasy_to_use"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/ic_easy_to_use"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DỄ SỬ DỤNG"
                        android:textSize="13sp"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear1"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:weightSum="9"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="3">
                    <ImageView
                        android:id="@+id/imgNon_exclusive"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/ic_non_exclusive"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="KHÔNG ĐỘC QUYỀN"
                        android:textSize="13sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="3">
                    <ImageView
                        android:id="@+id/imgIndependent_of_borders"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/ic_independent_of_borders" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TẠO MÃ ĐƠN GIẢN"
                        android:textSize="13sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="3">
                    <ImageView
                        android:id="@+id/imgIdentifiable"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/ic_identifiable"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DỄ NHẬN DẠNG"
                        android:textSize="13sp"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>